--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -103,9 +103,7 @@
             <div class="column">
                 <h6>Vaše mnenje</h6>
                 <p class="has-text-center">
-                    Vse pritožbe, pohvale, želje in sanje lahko oddaš na enega od kontaktnih linkov ali <a class="has-text-info">direktno v
-                    kontaktni
-                    obrazec.</a></p>
+                    Vse pritožbe, pohvale, želje in sanje lahko oddaš na enega od kontaktnih linkov.</p>
                 <p>
                     V slučaju, da hočeš tudi TI pošiljati sms-e iz te spletne strani mi javi, pa če bom takrat dosti pod
                     gasom ti verjetno odobrim.
