--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block navigation %}
     {% if current_user.is_authenticated %}
-        <div class="buttons are-medium gumbi-navigacija mb-5">
+        <div class="buttons  gumbi-navigacija mb-5">
             <a href="{{ url_for('appointments_bp.appointments') }}"
                class="button is-link is-outlined is-rounded">Termini</a>
             <a href="{{ url_for('calendar_bp.calendar') }}"
