Izgled za mobtel

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -53,12 +53,10 @@
                 <a class="button is-link is-rounded"
                    href="{{ url_for('appointments_bp.add_appointment') }}">
                     <span class="icon"><i class="fas fa-clock"></i></span>
-                    <span>Nov Termin</span>
-                    <span class="icon"><i class="fas fa-plus"></i></span>
+                    <span>Dodaj Termin</span>
                 </a>
                 <a class="button is-link is-rounded" href="{{ url_for('clients_bp.add_client') }}">
-                    <span class="icon"><i class="fas fa-plus"></i></span>
-                    <span>Nova Stranka</span>
+                    <span>Dodaj Stranko</span>
                     <span class="icon"><i class="fas fa-user"></i></span>
                 </a>
             </div>
