--- a/app/static/base.css
+++ b/app/static/base.css
@@ -1,9 +1,9 @@
-.dodaj {
+.buttons.dodaj {
     position: fixed;
     bottom: 3rem;
     right: 3rem;
     -webkit-backface-visibility: hidden;
-    -webkit-transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0, 0, 0);
 }
 
 .navbar, .navbar-end, .navbar-menu, .navbar-start {
@@ -22,65 +22,69 @@
     max-width: 35rem;
     margin: auto;
 }
-/*
+
 @media only screen and (max-width: 1000px) {
-    .hero-body{
-        padding: 10px;
-    }
     .control-name-and-tel {
         width: 5rem;
     }
+
+    .buttons.dodaj {
+        position: absolute;
+        bottom: 3rem;
+        right: 50%;
+        left: 50%;
+    }
 }
-*/
- /* Tooltip container */
+
+/* Tooltip container */
 .tooltip {
-  position: relative;
-  display: inline-block;
-  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
 }
 
 /* Tooltip text */
 .tooltip .tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: #555;
-  color: #fff;
-  text-align: center;
-  padding: 5px 0;
-  border-radius: 6px;
+    visibility: hidden;
+    width: 120px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
 
-  /* Position the tooltip text */
-  position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -60px;
+    /* Position the tooltip text */
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
 
-  /* Fade in tooltip */
-  opacity: 0;
-  transition: opacity 0.3s;
+    /* Fade in tooltip */
+    opacity: 0;
+    transition: opacity 0.3s;
 }
 
 /* Tooltip arrow */
 .tooltip .tooltiptext::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
+    visibility: visible;
+    opacity: 1;
 }
 
 #show-texts:focus ~ .dropdown-menu {
-  display: block;
+    display: block;
 }
 
 .table {
@@ -94,6 +98,7 @@
 .card-header {
     background-color: #446878;
 }
-.card-header-title{
+
+.card-header-title {
     color: white;
 }
