--- a/app/static/base.css
+++ b/app/static/base.css
@@ -29,10 +29,11 @@
     }
 
     .buttons.dodaj {
-        position: absolute;
+        position: fixed;
         bottom: 3rem;
-        right: 50%;
         left: 50%;
+        -webkit-backface-visibility: hidden;
+        -webkit-transform: translate3d(0, 0, 0);
     }
 }
 
