--- a/app/static/base.css
+++ b/app/static/base.css
@@ -3,7 +3,8 @@
     bottom: 3rem;
     right: 3rem;
     -webkit-backface-visibility: hidden;
-    -webkit-transform: translate3d(0, 0, 0);
+    z-index: 1000;
+    width: 100%;
 }
 
 .navbar, .navbar-end, .navbar-menu, .navbar-start {
@@ -24,16 +25,13 @@
 }
 
 @media only screen and (max-width: 1000px) {
-    .control-name-and-tel {
-        width: 5rem;
-    }
-
     .buttons.dodaj {
         position: fixed;
         bottom: 3rem;
-        left: 50%;
         -webkit-backface-visibility: hidden;
-        -webkit-transform: translate3d(0, 0, 0);
+        z-index: 1000;
+        width: 100%;
+        background-attachment: fixed !important;
     }
 }
 
