--- a/app/appointments/templates/timeline.html
+++ b/app/appointments/templates/timeline.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block navigation %}
     {% if current_user.is_authenticated %}
-        <div class="buttons are-medium gumbi-navigacija mb-5">
+        <div class="buttons is-info gumbi-navigacija mb-5">
             <a href="{{ url_for('appointments_bp.appointments') }}"
                class="button is-link is-rounded">Termini</a>
             <a href="{{ url_for('calendar_bp.calendar') }}"
@@ -17,7 +17,7 @@
 {% block content %}
     {% from "_appointment_timeline_item.html" import appointment_timeline_item %}
     {% from "_appointment_past_timeline_item.html" import appointment_past_timeline_item %}
-    <div class="container is-max-desktop">
+    <div class="container ">
         <div class="tabs is-toggle is-fullwidth" id="tabs">
             <ul>
                 <li class="is-active" data-tab="1">
@@ -146,6 +146,21 @@
             </div>
         </div>
     </div>
+    {% if current_user.is_authenticated %}
+        <div class="buttons has-addons is-bottom dodaj">
+            <a class="button is-link is-rounded"
+               href="{{ url_for('appointments_bp.add_appointment') }}">
+                <span class="icon"><i class="fas fa-clock"></i></span>
+                <span>Nov Termin</span>
+                <span class="icon"><i class="fas fa-plus"></i></span>
+            </a>
+            <a class="button is-link is-rounded" href="{{ url_for('clients_bp.add_client') }}">
+                <span class="icon"><i class="fas fa-plus"></i></span>
+                <span>Nova Stranka</span>
+                <span class="icon"><i class="fas fa-user"></i></span>
+            </a>
+        </div>
+    {% endif %}
 {% endblock %}
 {% block scripts %}
     <script src="{{ url_for('.static', filename='timelineTabs.js') }}"></script>
