--- a/app/calendar/templates/calendar.html
+++ b/app/calendar/templates/calendar.html
@@ -8,7 +8,7 @@
 {% endblock %}
 {% block navigation %}
     {% if current_user.is_authenticated %}
-        <div class="buttons are-medium gumbi-navigacija mb-5">
+        <div class="buttons is-info gumbi-navigacija mb-5">
             <a href="{{ url_for('appointments_bp.appointments') }}"
                class="button is-link is-outlined is-rounded">Termini</a>
             <a href="{{ url_for('calendar_bp.calendar') }}"
@@ -21,11 +21,28 @@
 {% block content %}
     <div class="calendar" id="color-calendar"></div>
     <div class="calendar events-display" id="events-display"></div>
+
+    {% if current_user.is_authenticated %}
+        <div class="buttons has-addons is-bottom dodaj">
+            <a class="button is-link is-rounded"
+               href="{{ url_for('appointments_bp.add_appointment') }}">
+                <span class="icon"><i class="fas fa-clock"></i></span>
+                <span>Nov Termin</span>
+                <span class="icon"><i class="fas fa-plus"></i></span>
+            </a>
+            <a class="button is-link is-rounded" href="{{ url_for('clients_bp.add_client') }}">
+                <span class="icon"><i class="fas fa-plus"></i></span>
+                <span>Nova Stranka</span>
+                <span class="icon"><i class="fas fa-user"></i></span>
+            </a>
+        </div>
+    {% endif %}
 {% endblock %}
 
 {% block scripts %}
     <script>
-    const myEvents = {{ calendar_appointments | safe }}
+        const myEvents =
+        {{ calendar_appointments | safe }}
     </script>
     <script src="{{ url_for('.static', filename='calendar.js') }}"></script>
 {% endblock %}
