--- a/app/static/base.css
+++ b/app/static/base.css
@@ -28,14 +28,10 @@
         padding-top: 0px;
     }
 
-    .control-name-and-tel {
-        width: 3rem;
-    }
-
     .buttons.dodaj {
         position: fixed;
         bottom: 3rem;
-        margin: auto;
+        left: 3rem;
         -webkit-backface-visibility: hidden;
         z-index: 1000;
         background-attachment: fixed !important;
@@ -108,3 +104,4 @@
 .card-header-title {
     color: white;
 }
+
