prettying it up

--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -100,8 +100,8 @@
     {% else %}
         <article class="message">
             <div class="message-header">
-                <span class="icon"><i class="fas fa-info" aria-hidden="true"></i></span>
-                <span>Potrebna Registracija</span>
+                <p><span class="icon"><i class="fas fa-info"
+                                         aria-hidden="true"></i></span><span>Potrebna Registracija</span></p>
             </div>
             <div class="message-body">
                 Za uporabo te spletne strani se morate <a href="{{ 'auth_bp.signup' }}">registrirati.</a>
