--- a/app/static/base.css
+++ b/app/static/base.css
@@ -1,7 +1,7 @@
 .dodaj {
     position: fixed;
     bottom: 3rem;
-    right: 1rem;
+    right: 3rem;
     -webkit-backface-visibility: hidden;
     background-attachment: fixed !important;
     z-index: 1000;
@@ -32,7 +32,7 @@
     .buttons.dodaj {
         position: fixed;
         bottom: 3rem;
-        right: 2rem;
+        margin: auto;
         -webkit-backface-visibility: hidden;
         z-index: 1000;
         background-attachment: fixed !important;
