--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -98,7 +98,7 @@
             </div>
         {% endif %}
     {% else %}
-        <article class="message">
+        <article class="message is-success">
             <div class="message-header">
                 <p><span class="icon"><i class="fas fa-info"
                                          aria-hidden="true"></i></span><span>Potrebna Registracija</span></p>
@@ -107,7 +107,7 @@
                 Za uporabo te spletne strani se morate <a href="{{ 'auth_bp.signup' }}">registrirati.</a>
                 Če ste se že, se lahko vpišete <a
                     href="{{ 'auth_bp.login' }}">tukaj.</a>
-                <p class="help">Brez nč ni nč... vse deluje prek uporabniškega profila.</p>
+                <p class="help">Brez nč ni nč... vse deluje prek uporabnikovega profila.</p>
             </div>
         </article>
     {% endif %}
