--- a/app/static/base.css
+++ b/app/static/base.css
@@ -5,6 +5,7 @@
     -webkit-backface-visibility: hidden;
     background-attachment: fixed !important;
     z-index: 1000;
+    width: 21rem;
 }
 
 .navbar, .navbar-end, .navbar-menu, .navbar-start {
@@ -36,6 +37,8 @@
         -webkit-backface-visibility: hidden;
         z-index: 1000;
         background-attachment: fixed !important;
+        width: 21rem;
+
     }
 }
 
