prettying it up

--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -38,7 +38,7 @@
                 <div class="card">
                     <header class="card-header">
                         <p class="card-header-title">
-                            <span class="icon"><i class="fas fa-info" aria-hidden="true"></i></span>
+                            <span class="icon"><i class="fas fa-info-circle" aria-hidden="true"></i></span>
                             <span>Splošne Informacije</span>
                         </p>
                     </header>
@@ -98,9 +98,9 @@
             </div>
         {% endif %}
     {% else %}
-        <article class="message is-success">
+        <article class="message is-info">
             <div class="message-header">
-                <p><span class="icon"><i class="fas fa-info"
+                <p><span class="icon"><i class="fas fa-info-circle"
                                          aria-hidden="true"></i></span><span>Potrebna Registracija</span></p>
             </div>
             <div class="message-body">
