--- a/app/static/base.css
+++ b/app/static/base.css
@@ -33,7 +33,7 @@
     .buttons.dodaj {
         position: fixed;
         bottom: 3rem;
-        margin: auto;
+        left:1rem;
         -webkit-backface-visibility: hidden;
         z-index: 1000;
         background-attachment: fixed !important;
@@ -101,7 +101,7 @@
 }
 
 .card-header {
-    background-color: #446878;
+    background-color: #13445A;
 }
 
 .card-header-title {
